base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 637423663330.dkr.ecr.ap-northeast-2.amazonaws.com/baggu-ecr:nginx-v1.52
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:    # 리소스 요청 및 제한 추가
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
