base/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
